--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@astrojs/rss": "^4.0.9",
     "@astrojs/sitemap": "^3.2.1",
     "@astrojs/tailwind": "^5.1.2",
+    "@fontsource-variable/roboto-slab": "^5.1.0",
+    "@fontsource-variable/rokkitt": "^5.1.0",
     "@fontsource/fira-sans": "^5.1.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
