--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "swiper": "^11.1.15",
     "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
